[gd_scene load_steps=3 format=3 uid="uid://y0ook1rbwdrv"]

[ext_resource type="Script" uid="uid://dj3tl1n6h60qr" path="res://scripts/ui/TutorialSystem.gd" id="1_5gx4w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_epmv3"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 5

[node name="TutorialSystem" type="CanvasLayer"]
layer = 10
script = ExtResource("1_5gx4w")

[node name="HighlightRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 0.6, 1, 0.2)

[node name="Dimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="TutorialPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(500, 200)
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_epmv3")

[node name="TitleLabel" type="Label" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 15.0
offset_right = 200.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Добро пожаловать!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -30.0
offset_right = 220.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 14
text = "Добро пожаловать в игру samogon.exe! Здесь вы будете управлять подпольным производством алкоголя. Давайте познакомимся с основными механиками."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NextButton" type="Button" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -50.0
offset_right = 60.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Далее"

[node name="SkipButton" type="Button" parent="TutorialPanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
text = "Пропустить"
